; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_ilbcdec.c_correlation.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_ilbcdec.c_correlation.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i64*, i64, i64, i64, i64)* @correlation to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @correlation(i32* %0, i32* %1, i64* %2, i64 %3, i64 %4, i64 %5, i64 %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i64*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  %14 = alloca i64, align 8
  %15 = alloca i64*, align 8
  store i32* %0, i32** %8, align 8
  store i32* %1, i32** %9, align 8
  store i64* %2, i64** %10, align 8
  store i64 %3, i64* %11, align 8
  store i64 %4, i64* %12, align 8
  store i64 %5, i64* %13, align 8
  store i64 %6, i64* %14, align 8
  %16 = load i64*, i64** %10, align 8
  %17 = load i64, i64* %12, align 8
  %18 = load i64, i64* %13, align 8
  %19 = sub i64 %17, %18
  %20 = load i64, i64* %11, align 8
  %21 = sub i64 %19, %20
  %22 = getelementptr inbounds i64, i64* %16, i64 %21
  store i64* %22, i64** %15, align 8
  %23 = load i64*, i64** %10, align 8
  %24 = load i64, i64* %12, align 8
  %25 = load i64, i64* %13, align 8
  %26 = sub i64 %24, %25
  %27 = getelementptr inbounds i64, i64* %23, i64 %26
  %28 = load i64*, i64** %15, align 8
  %29 = load i64, i64* %13, align 8
  %30 = load i64, i64* %14, align 8
  %31 = call i32 @scale_dot_product(i64* %27, i64* %28, i64 %29, i64 %30)
  %32 = load i32*, i32** %8, align 8
  store i32 %31, i32* %32, align 4
  %33 = load i64*, i64** %15, align 8
  %34 = load i64*, i64** %15, align 8
  %35 = load i64, i64* %13, align 8
  %36 = load i64, i64* %14, align 8
  %37 = call i32 @scale_dot_product(i64* %33, i64* %34, i64 %35, i64 %36)
  %38 = load i32*, i32** %9, align 8
  store i32 %37, i32* %38, align 4
  %39 = load i32*, i32** %9, align 8
  %40 = load i32, i32* %39, align 4
  %41 = icmp eq i32 %40, 0
  br i1 %41, label %42, label %45

42:                                               ; preds = %7
  %43 = load i32*, i32** %8, align 8
  store i32 0, i32* %43, align 4
  %44 = load i32*, i32** %9, align 8
  store i32 1, i32* %44, align 4
  br label %45

45:                                               ; preds = %42, %7
  ret void
}

declare dso_local i32 @scale_dot_product(i64*, i64*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
